--- a/css/scss/base/_reset.scss
+++ b/css/scss/base/_reset.scss
@@ -5,10 +5,6 @@
     box-sizing: border-box;
 }
 
-html {
-  overflow: hidden;
-}
-
 a {
   text-decoration: none;
 }
