--- a/css/scss/layout/_main.scss
+++ b/css/scss/layout/_main.scss
@@ -12,3 +12,7 @@
   flex-wrap: wrap;
   height: 100vh;
 }
+
+.main-page-index {
+  overflow: hidden;
+}
